# math-lib

./: README.md  abs.py  pyproject.toml  sub.py
src/math_lib/: add.py  exp.py  mult.py  sub.py
tests/math_lib/: test_mult.py
