[project]
name = "math-lib"
version = "0.0.1"
authors = [
  { name="DEPA SAVIA Member", email="msu-evrl@egmail.com" },
]
description = "Home-made Mathematics library using the Python programming language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/knwachuk/math-lib.git"
"Bug Tracker" = "https://github.com/knwachuk/math-lib.git/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
